[gd_scene load_steps=2 format=3]

[ext_resource path="res://scripts/FinalSummary.gd" type="Script" id="1_9k2fg"]

[node name="FinalSummary" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_9k2fg")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.0823529, 0.0941176, 0.113725, 1)
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Header" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Final Summary"
vertical_alignment = 1
horizontal_alignment = 1
unique_name_in_owner = true

[node name="TotalUsed" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Total Used: 0"
unique_name_in_owner = true

[node name="TotalWasted" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Total Wasted: 0"
unique_name_in_owner = true

[node name="FinalScore" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Final Score: 0"
unique_name_in_owner = true

[node name="Feedback" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Feedback"
horizontal_alignment = 1
unique_name_in_owner = true

[node name="Buttons" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MainMenuButton" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
text = "Back to Main Menu"
unique_name_in_owner = true
